# cpp-book

./: .codespellrc  CONTRIBUTING.md  LICENSE  README.md  book.toml
.github/ISSUE_TEMPLATE/: add-chapter.md  add-project-chapter.md
.github/workflows/: mdbook.yml
src/: SUMMARY.md  home.md  introduction.md
src/appendix/: A-keywords.md  B-operators.md  C-standard-versions.md  D-cxx-flags.md  appendix.md
src/ch01-getting-started/: hello-cmake.md  hello-godbolt.md  hello-vcpkg.md  hello-world.md  installation.md  linux.md  macos.md  windows.md
src/ch01-getting-started/examples/hello_world/: CMakeLists.txt  CMakeLists2.txt
src/ch02-guessing-game/: CMakeLists.txt  CMakePresets.json  guessing-game.md  main_cxx_17.cxx  main_cxx_20.cxx
src/ch03-common-concepts/: comments.md  common-concepts.md  control-flow.md  data-types.md  functions.md  vars-mut.md
src/ch04-ownership/: ownership.md  refs-moves.md  span.md  what-is-it.md
src/ch05-structures/: create.md  example.md  methods.md  structures.md  strutures.md
